test/netlist/error/input-as-output.bop
A(a) = a
where
  _ = Id(a);
end where;
